# FastAPI-CI

./: .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  crud.py  inject_data.py  logger_config.py  main.py  pyproject.toml
actions/: create_first_superuser.py
api/: __init__.py  dependencies.py
api/v1/: __init__.py  auth_jwt.py  manufacturers.py  products.py  users.py
auth/: jwt_helper.py
core/: __init__.py  config.py  get_db.py
core/models/: __init__.py  manufacturer.py  mixins.py  product.py  user.py
core/schemas/: __init__.py  manufacturer.py  product.py  user.py
tests/: confest.py  conftest.py  utils.py
tests/crud/: test_cruds.py
tests/routes/: test_manufacturer_product.py  test_manufacturers.py  test_superusers.py  test_users.py
tests/unit/: test_jwt_auth.py  test_user_model.py
